Resize index.html's body height to ensure that the navigation bar is visible

--- a/css/peutcook.css
+++ b/css/peutcook.css
@@ -40,7 +40,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 290vh;
+	height: 270vh;
 	margin: -20px 0 50px;
 }
 
